--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,7 +2,7 @@
 
 #narrat {
   /* Customise CSS variables here. They will override the existing narrat ones. You can also add your own variables */
-  --bg-color: #131720;
+  --bg-color: #3f2c15;
   --text-color: #d9e1f2;
   --primary: hsl(255, 30%, 55%);
   --focus: hsl(210, 90%, 50%);
